test/integration/bad/numeric-literal/real-bad6.stan
transformed data {
    real x = 12.3e+10_;
}